<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_chart"
            android:title="@string/nav_stats" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_readings"
            android:icon="@drawable/ic_menu_readings"
            android:title="@string/nav_readings" />
    </group>

    <group android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_menu_bluetooth"
            android:title="@string/nav_bluetooth" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/nav_help" />
    </group>

    <group android:id="@+id/group_dev"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dev"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>
